--- a/Farbverbrauch/Farbverbrauch-Info.plist
+++ b/Farbverbrauch/Farbverbrauch-Info.plist
@@ -33,6 +33,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
